--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 title: Jeff Wang
-description: check out content
+
+[[params.social]]
+  icon = "google-scholar"
+  icon_pack = "ai"
+  link = "https://scholar.google.com/citations?user=PW5OX-YAAAAJ&hl=en"
