--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 theme: jekyll-theme-minimal
 title: Jeff Wang
+author: Jeff Wang
+
+navbar-links:
+  About Me: "aboutme"
+  
+avatar: "
 
 [params.social]
   icon = "google-scholar"
