--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@ author: Jeff Wang
 
 navbar-links:
   About Me: "aboutme"
+  Research: "README"
+  
+
   
 avatar: "https://github.com/jeffwang1001/jeffwang1001.github.io/blob/main/jeffwang.png"
 
