--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,16 @@ author: Jeff Wang
 
 navbar-links:
   About Me: "aboutme"
-  Research: "README"
-  
+  Research: "research"
+  Fun: 
 
   
 avatar: "https://github.com/jeffwang1001/jeffwang1001.github.io/blob/main/jeffwang.png"
 
+round-avatar: true
 
+social-network-links:
+  email: "jeffwang1001@gmail.com"
+  github: jeffwang1001
+  linkedin: jeff-wang-ucla
 
