--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,6 @@ social-network-links:
   email: "jeffwang1001@gmail.com"
   github: jeffwang1001
   linkedin: jeff-wang-ucla
+  google-scholar: citations?user=PW5OX-YAAAAJ&hl=en
+  
 
