--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ navbar-links:
   Fun: 
 
   
-avatar: "https://github.com/jeffwang1001/jeffwang1001.github.io/blob/main/jeffwang.png"
+avatar: "/Desktop/jeffwang.png"
 
 round-avatar: true
 
