--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ author: Jeff Wang
 navbar-links:
   About Me: "aboutme"
   Research: "research"
-  Fun: 
+  Fun: "fun"
 
   
 avatar: "/jeffwang.png"
