--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,11 @@ social-network-links:
   linkedin: jeff-wang-ucla
   google-scholar: citations?user=PW5OX-YAAAAJ&hl=en
   
+  
+  
+  navbar-col: "FFA500"
+  footer-col: "FFA500"
+
+
+  
 
