--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ social-network-links:
   
   
   
-navbar-col: "#FFA500"  
-footer-col: "#FFA500"
+navbar-col: "#bd5f00"  
+footer-col: "#bd5f00"
 
 
   
