--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ navbar-links:
   Research: "research"
   Fun: "fun"
   Contact: "contact"
+  Blog: "blog"
+    - Post 1: "post1"
   
 avatar: "/jeffwang.png"
 
