--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ social-network-links:
   github: jeffwang1001
   linkedin: jeff-wang-ucla
   google-scholar: citations?user=PW5OX-YAAAAJ&hl=en
+  ORCID: 0000-0002-4164-1264
+ 
   
   
   
